azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_yaml_directive-8.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..9
      Directive@0..9
        DirectiveToken@0..1 "%"
        DirectiveName@1..5 "YAML"
        InlineSeparator@5..6 " "
        Error@6..7 "1"
        InlineSeparator@7..8 " "
        Error@8..9 "2"
    ,
    errors: [
        Diagnostic {
            span: 6..7,
            severity: Error,
            message: "invalid YAML version: expected '.'",
        },
        Diagnostic {
            span: 8..9,
            severity: Error,
            message: "expected end of line",
        },
    ],
}
