azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-12.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..11
      Directive@0..11
        DirectiveToken@0..1 "%"
        TagDirective@1..11
          DirectiveName@1..4 "TAG"
          InlineSeparator@4..5 " "
          SecondaryTagHandle@5..7 "!!"
          InlineSeparator@7..8 " "
          TagPrefix@8..11 "foo"
    ,
    errors: [],
}
