azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-24.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..46
      Directive@0..46
        DirectiveToken@0..1 "%"
        TagDirective@1..46
          DirectiveName@1..4 "TAG"
          InlineSeparator@4..5 " "
          TagToken@5..6 "!"
          NamedTagHandle@6..10 "yaml"
          TagToken@10..11 "!"
          InlineSeparator@11..12 " "
          TagToken@12..13 "!"
          TagPrefix@13..46 "https://example.com:4 ..."
    ,
    errors: [],
}
